[gd_scene load_steps=2 format=3 uid="uid://b53wfpe48fjry"]

[ext_resource type="Script" path="res://scripts/UI/menu.gd" id="1_6xff4"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6xff4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.784755, 0.789823, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 33.0
offset_bottom = 56.0
grow_horizontal = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Jogao"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Label"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.0
offset_top = 42.0
offset_right = 37.0
offset_bottom = 143.0
grow_horizontal = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/Label/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Iniciar" type="Button" parent="VBoxContainer/Label/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Iniciar"

[node name="Creditos" type="Button" parent="VBoxContainer/Label/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Creditos"

[node name="Sair" type="Button" parent="VBoxContainer/Label/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Sair"

[connection signal="pressed" from="VBoxContainer/Label/HBoxContainer/VBoxContainer2/Iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="VBoxContainer/Label/HBoxContainer/VBoxContainer2/Creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="VBoxContainer/Label/HBoxContainer/VBoxContainer2/Sair" to="." method="_on_sair_pressed"]
